--- a/Projects/aind2-nlp-capstone/machine_translation.ipynb
+++ b/Projects/aind2-nlp-capstone/machine_translation.ipynb
@@ -21,9 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -40,6 +38,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/siguma/anaconda3/envs/aind-nlp/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -84,7 +84,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 7555176865547706043\n",
+      "incarnation: 912891847084408083\n",
       "]\n"
      ]
     }
@@ -568,11 +568,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_26 (InputLayer)        (None, 21, 1)             0         \n",
+      "_________________________________________________________________\n",
+      "bidirectional_3 (Bidirection (None, 21, 200)           61200     \n",
+      "_________________________________________________________________\n",
+      "dense_22 (Dense)             (None, 21, 344)           69144     \n",
+      "=================================================================\n",
+      "Total params: 130,344\n",
+      "Trainable params: 130,344\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_27 (InputLayer)        (None, 21, 1)             0         \n",
+      "_________________________________________________________________\n",
+      "bidirectional_4 (Bidirection (None, 21, 200)           61200     \n",
+      "_________________________________________________________________\n",
+      "dense_23 (Dense)             (None, 21, 345)           69345     \n",
+      "=================================================================\n",
+      "Total params: 130,545\n",
+      "Trainable params: 130,545\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "def bd_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
     "    \"\"\"\n",
@@ -584,11 +617,25 @@
     "    :return: Keras model built, but not trained\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return None\n",
+    "    inputs = Input(shape=input_shape[1:])\n",
+    "    bd_rnn = Bidirectional(GRU(100, return_sequences=True))(inputs)\n",
+    "    predictions = Dense(french_vocab_size, activation='softmax')(bd_rnn)\n",
+    "    learning_rate = 0.01\n",
+    "    \n",
+    "    model = Model(inputs=inputs, outputs=predictions)\n",
+    "    model.compile(loss=sparse_categorical_crossentropy, optimizer=Adam(learning_rate), metrics=['accuracy'])\n",
+    "    \n",
+    "    return model\n",
     "tests.test_bd_model(bd_model)\n",
     "\n",
+    "# TODO: Train and Print prediction(s)\n",
+    "tmp_x = pad(preproc_english_sentences, max_french_sequence_length)\n",
+    "tmp_x = tmp_x.reshape((-1, preproc_french_sentences.shape[-2], 1))\n",
     "\n",
-    "# TODO: Train and Print prediction(s)"
+    "bd_rnn_model = bd_model(tmp_x.shape, max_french_sequence_length, english_vocab_size+1, french_vocab_size+1)\n",
+    "bd_rnn_model.fit(tmp_x, preproc_french_sentences, batch_size=1024, epochs=10, validation_split=0.2)\n",
+    "\n",
+    "print(logits_to_text(bd_rnn_model.predict(tmp_x[:1])[0], french_tokenizer))"
    ]
   },
   {
@@ -773,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
