--- a/Projects/aind2-nlp-capstone/machine_translation.ipynb
+++ b/Projects/aind2-nlp-capstone/machine_translation.ipynb
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/siguma/anaconda3/envs/aind-nlp/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "C:\\Users\\siguma\\Anaconda3\\envs\\aind-nlp\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
@@ -84,7 +84,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 912891847084408083\n",
+      "incarnation: 14918015486433392483\n",
       "]\n"
      ]
     }
@@ -146,7 +146,7 @@
       "small_vocab_en Line 1:  new jersey is sometimes quiet during autumn , and it is snowy in april .\n",
       "small_vocab_fr Line 1:  new jersey est parfois calme pendant l' automne , et il est neigeux en avril .\n",
       "small_vocab_en Line 2:  the united states is usually chilly during july , and it is usually freezing in november .\n",
-      "small_vocab_fr Line 2:  les états-unis est généralement froid en juillet , et il gèle habituellement en novembre .\n"
+      "small_vocab_fr Line 2:  les Ã©tats-unis est gÃ©nÃ©ralement froid en juillet , et il gÃ¨le habituellement en novembre .\n"
      ]
     }
    ],
@@ -346,7 +346,7 @@
       "Max English sentence length: 15\n",
       "Max French sentence length: 21\n",
       "English vocabulary size: 199\n",
-      "French vocabulary size: 344\n"
+      "French vocabulary size: 345\n"
      ]
     }
    ],
@@ -650,12 +650,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from keras.optimizers import RMSprop\n",
+    "\n",
     "def encdec_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
     "    \"\"\"\n",
     "    Build and train an encoder-decoder model on x and y\n",
@@ -666,11 +666,31 @@
     "    :return: Keras model built, but not trained\n",
     "    \"\"\"\n",
     "    # OPTIONAL: Implement\n",
-    "    return None\n",
+    "    encoder_inputs = Input(shape=input_shape[1:])\n",
+    "    encoder_rnn = GRU(100, return_state=True)\n",
+    "    encoder_outputs, state = encoder_rnn(encoder_inputs)\n",
+    "    \n",
+    "    decoder_inputs = RepeatVector(output_sequence_length)(encoder_outputs)\n",
+    "    decoder_rnn = GRU(100, return_sequences=True)\n",
+    "    decoder_outputs = decoder_rnn(decoder_inputs, initial_state=state)\n",
+    "    decoder_dense = Dense(french_vocab_size, activation='softmax')\n",
+    "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+    "    learning_rate = 0.01\n",
+    "    \n",
+    "    model = Model(encoder_inputs, decoder_outputs)\n",
+    "    model.compile(loss=sparse_categorical_crossentropy, optimizer=Adam(learning_rate), metrics=['accuracy'])\n",
+    "    return model\n",
     "tests.test_encdec_model(encdec_model)\n",
     "\n",
     "\n",
-    "# OPTIONAL: Train and Print prediction(s)"
+    "# OPTIONAL: Train and Print prediction(s)\n",
+    "tmp_x = pad(preproc_english_sentences, max_french_sequence_length)\n",
+    "tmp_x = tmp_x.reshape(-1, preproc_french_sentences.shape[-2], 1)\n",
+    "\n",
+    "encdec_rnn_model = encdec_model(tmp_x.shape, max_french_sequence_length, english_vocab_size+1, french_vocab_size+1)\n",
+    "encdec_rnn_model.fit(tmp_x, preproc_french_sentences, batch_size=1024, epochs=10, validation_split=0.2)\n",
+    "\n",
+    "print(logits_to_text(encdec_rnn_model.predict(tmp_x[:1])[0], french_tokenizer))"
    ]
   },
   {
